--- a/.github/workflows/5-merge-your-pull-request.yml
+++ b/.github/workflows/5-merge-your-pull-request.yml
@@ -1,13 +1,16 @@
-name: Step 5, Merge your pull request
+name: Step 4, Add branch protections
 
-# This step triggers after a pull requst is merged to `main`.
-# This workflow updates from step 5 to step X.
+# This step triggers after we turn on or edit a branch protection rule.
+# This workflow updates from step 4 to step 5.
 
-# This will run every time we create push a commit to `main`.
+# This will run every time we turn on or edit a branch protection rule.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  push:
+  branch_protection_rule:
+    types:
+      - created
+      - edited
     branches:
       - main
 
@@ -31,18 +34,18 @@ jobs:
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_merge:
-    name: On merge
+  on_update_branch_protection:
+    name: On update branch protection
     needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 5.
+    # 2. The step is currently 4.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 5 }}
+          && needs.get_current_step.outputs.current_step == 4 }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
@@ -53,14 +56,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Let's get all the branches.
+          ref: ci # Important, as normally `branch_protection_rule` event won't grab other branches
 
 
-      # TODO: figure out a better way to deal with the lock on `main`
-      # In README.md, switch step 5 for step X.
-      # - name: Update to step X
-      #   uses: skills/action-update-step@v2
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     from_step: 5
-      #     to_step: X
-      #     branch_name: ci
+      # TODO: figure out a better way to deal with the lock on `main`, merge conflict this creates
+      # In README.md, switch step 4 for step 5.
+      - name: Update to step 5
+        uses: skills/action-update-step@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          from_step: 4
+          to_step: 5
+          branch_name: ci
