--- a/.github/workflows/5-merge-your-pull-request.yml
+++ b/.github/workflows/5-merge-your-pull-request.yml
@@ -1,16 +1,13 @@
-name: Step 4, Add branch protections
+name: Step 5, Merge your pull request
 
-# This step triggers after we turn on or edit a branch protection rule.
-# This workflow updates from step 4 to step 5.
+# This step triggers after a pull requst is merged to `main`.
+# This workflow updates from step 5 to step X.
 
-# This will run every time we turn on or edit a branch protection rule.
+# This will run every time we create push a commit to `main`.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  branch_protection_rule:
-    types:
-      - created
-      - edited
+  push:
     branches:
       - main
 
@@ -34,18 +31,18 @@ jobs:
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_update_branch_protection:
-    name: On update branch protection
+  on_merge:
+    name: On merge
     needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 4.
+    # 2. The step is currently 5.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 4 }}
+          && needs.get_current_step.outputs.current_step == 5 }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
@@ -56,15 +53,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Let's get all the branches.
-          ref: ci # Important, as normally `branch_protection_rule` event won't grab other branches
 
 
-      # TODO: figure out a better way to deal with the lock on `main`, merge conflict this creates
-      # In README.md, switch step 4 for step 5.
-      - name: Update to step 5
+      # TODO: figure out a better way to deal with the lock on `main`
+      # In README.md, switch step 5 for step X.
+      - name: Update to step X
         uses: skills/action-update-step@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 4
-          to_step: 5
-          branch_name: ci
+         token: ${{ secrets.GITHUB_TOKEN }}
+         from_step: 5
+         to_step: X
+         branch_name: ci
