--- a/.github/workflows/5-merge-your-pull-request.yml
+++ b/.github/workflows/5-merge-your-pull-request.yml
@@ -56,7 +56,7 @@ jobs:
 
 
       # TODO: figure out a better way to deal with the lock on `main`
-      # In README.md, switch step 5 for step X..
+      # In README.md, switch step 5 for step X.
       - name: Update to step X
         uses: skills/action-update-step@v2
         with:
